// Copyright 2023 The Elastic AI Search Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax="proto2";
package EA.servlet;
option cc_generic_services = true;

import "elasticann/proto/servlet/error_code.proto";

enum RaftControlOp {
  SetPeer = 1;
  TransLeader = 2;
  SnapShot = 3;
  GetLeader = 4;
  ShutDown = 5;
  Vote = 6;
  ResetVoteTime = 7;
};

// operation request/response

message RaftControlRequest {
  required RaftControlOp op_type = 1;
  optional int64 region_id = 2;
  optional string new_leader = 3;
  repeated string old_peers = 4;
  repeated string new_peers = 5;
  optional int64 election_time = 6;
  optional bool force = 7;
};

message RaftControlResponse {
  required int64 region_id = 1;
  required ErrCode errcode = 2;
  optional string leader = 3;
  optional string errmsg = 4;
};

enum RecoverOpt {
  DO_NONE                = 0;
  DO_REMOVE_ILLEGAL_PEER = 1;
  DO_REMOVE_PEER         = 2;
  DO_SET_PEER            = 3;
  DO_INIT_REGION         = 4;
};
